--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>glitch-terminal-persona</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="I’m a dedicated full-stack developer with a strong foundation in
+                building scalable, real-time applications — particularly within
+                industrial IoT and cloud-native ecosystems" />
+    <meta name="author" content="Mansoor" />
 
-    <meta property="og:title" content="glitch-terminal-persona" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Mansoor Ahmed portfolio" />
+    <meta property="og:description" content="I’m a dedicated full-stack developer with a strong foundation in
+                building scalable, real-time applications — particularly within
+                industrial IoT and cloud-native ecosystems" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
   </head>
 
   <body>
