--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>glitch-terminal-persona</title>
+    <title>Mansoor Ahmed</title>
     <meta name="description" content="I’m a dedicated full-stack developer with a strong foundation in
                 building scalable, real-time applications — particularly within
                 industrial IoT and cloud-native ecosystems" />
